Bug 86818 - PA does not successfully exit on TERM
Summary: PA does not successfully exit on TERM
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords: love
Depends on:
Blocks:
 
Reported: 2014-11-28 12:37 UTC by Jan Alexander Steffens (heftig)
Modified: 2015-05-25 13:23 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
exit with 0 (1.02 KB, patch)
2015-05-20 23:41 UTC, Peter Meerwald
Details | Splinter Review

Description Jan Alexander Steffens (heftig) 2014-11-28 12:37:57 UTC
When sent SIGTERM, PA exits with status 1.

Because of that, when systemd stops pulseaudio.service, it marks the unit as failed.

pulseaudio 5.99.1-4-g7856
Comment 1 Peter Meerwald 2015-05-20 23:41:59 UTC
Created attachment 115934 [details] [review]
exit with 0

exit code 1 on SIGTERM is not a good idea, use 0 instead (as several other projects changed to in order to adapt to systemd)

note: could use systemd's SuccessExitStatus= to work around this issue


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.